presentation/core/src/main/java/com/example/helper/error/IExceptionHandler.kt
package com.example.helper.error

interface IExceptionHandler {
    fun handleError(throwable: Throwable)
}
